--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,6 +28,7 @@ subjects:
 - !lcsh 'Conduct of life -- Fiction'
 - !lcsh 'British -- France -- Fiction'
 - !lcc 'PR'
+- GITenberg
 title: "The Indiscretion of the Duchess\r\nBeing a Story Concerning Two Ladies, a\
   \ Nobleman, and a Necklace"
 url: http://www.gutenberg.org/ebooks/13909
